# realms

./: .codeiumignore  .flake8  .gitignore  .gitmodules  AGENTS.md  AI_CONTRIBUTING.md  CHANGELOG.md  CONTINUE_MUNDUS_WORK.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTES.md  OPTIMIZATION_REPORT.md  PR_DESCRIPTION.md  QUARTERS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TODO.md  arg.json  build_image.sh  canister_ids.json  canister_ids.json.bak  codex_test.py  commits.tsv  core-extensions.json  deploy.py  deploy_local.py  deploy_mainnet.py  deploy_utils.py  deployment_file_example.yml  dfx.json  dfx.staging.json  dfx.template.json  dns.txt  docker-compose.yml  download_wasms.sh  entrypoint.sh  load_justice_demo_direct.py  (+32 more)
cli/: DEPLOYMENTS.md  DEVELOPERS.md  MANIFEST.in  README.md  example_realm_config.json  example_realm_config.py  publish_to_pypi.py  pyproject.toml  realm_config_schema.json  run_linters.sh  test_realms_cli.py
cli/example/: example_realm_codex..py  example_realm_config.json  example_realm_config.py  example_realm_data.json
cli/realms/: __init__.py  codices  core  ggg  mundus.py  realm.py  registry.py
cli/realms/cli/: __init__.py  casals_versions.py  constants.py  dfx.template.json  generator.py  main.py  models.py  requirements.in  requirements.txt  utils.py
cli/realms_cli/: __init__.py  constants.py  logging_config.py  main.py  models.py  utils.py
cli/realms_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/realms_gos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/tests/: __init__.py  conftest.py  docker_mode_tests.sh  test_autoscale.py  test_citizen_import.py  test_cross_quarter.py  test_db_explorer.py  test_docker_mode.sh  test_fs_commands.py  test_gen_arrangements.py  test_installer_commands.py  test_join_targets.py  test_lifecycle_gate.py  test_models.py  test_org_member_admin.py  test_position_admin.py  test_quarter_bootstrap.py  test_quarter_entity.py  test_quarter_phase2.py  test_quarter_provisioning.py  test_realm_ref.py  test_runtime_sandbox_config.py  test_utils.py
(+1678 files in other folders)
