[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realms-gos"
version = "0.2.0"
description = "Realms Government Operating System - CLI and SDK for managing realms on the Internet Computer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Realms Team", email = "team@realms.dev"}
]
keywords = ["realms", "cli", "internet-computer", "dfx", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "jinja2>=3.0.0",
    "gitpython>=3.1.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "kybra==0.7.*",
    "kybra-simple-logging==0.2.*",
    "kybra-simple-db==0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/smartsocialcontracts/realms"
Repository = "https://github.com/smartsocialcontracts/realms"
Documentation = "https://docs.realms.dev"
"Bug Tracker" = "https://github.com/smartsocialcontracts/realms/issues"

[project.scripts]
realms = "realms.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["realms*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "0.2.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
